[code] added deeplink and packageName
